# qtstream

./: Cargo.toml  README.md
src/: apple.rs  main.rs  qt.rs  qt_device.rs  qt_pkt.rs  qt_value.rs
src/coremedia/: audio_desc.rs  clock.rs  format_desc.rs  mod.rs  sample.rs  time.rs
