[package]
name = "qtstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
hex = "0.4.3"
rusb = "0.9.1"
rusty_libimobiledevice = { version = "0.1.2", features = ["vendored"] }
signal-hook = "0.3.14"
